// Vitest Snapshot v1

exports[`snapshot 1`] = `
Object {
  "this": Object {
    "is": Set {
      "of",
      "snapshot",
    },
  },
}
`;

exports[`snapshot with big array 1`] = `
Object {
  "this": Object {
    "is": Set {
      "one",
      Array [
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
      ],
    },
  },
}
`;

exports[`snapshot with big string 1`] = `
Object {
  "this": Object {
    "is": Set {
      "one",
      "zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo",
    },
  },
}
`;
